# strict-types

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  license_header
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml  test.yml
contrib/: depCargo.toml
doc/: workflow.md
scripts/: typelib.sh
src/: armor.rs  bindle.rs  build.rs  check.rs  collection.rs  data.rs  dtl.rs  ident.rs  lib.rs  macros.rs  path.rs  primitive.rs  schema.rs  serialize.rs  stl.rs  test.rs  ty.rs  types.rs  util.rs  validate.rs  verify.rs  write.rs
src/ast/: encoding.rs  id.rs  iter.rs  mod.rs  path.rs  serialize.rs  translate.rs  ty.rs
src/dtl/: embedded.rs  gravel.rs  id.rs  mod.rs  monolith.rs  serialize.rs  translate.rs  ty.rs  type_lib.rs
src/encoding/: base.rs  check.rs  error.rs  macros.rs  mod.rs  read.rs  serialize.rs  test.rs  traits.rs  types.rs  write.rs
src/layout/: build.rs  id.rs  linear.rs  memory.rs  mod.rs  size.rs  translate.rs  ty.rs  type.rs  vesper.rs
src/old-encoding/: builders.rs  check.rs  mod.rs  serialize.rs  write.rs
src/primitive/: builtin.rs  constants.rs  impls.rs  mod.rs  num.rs
src/symlib/: mod.rs  serialize.rs  symbolic.rs  transpile.rs
src/typelib/: build.rs  builder.rs  compile.rs  encoding.rs  id.rs  mod.rs  serialize.rs  symbolic.rs  translate.rs  transpile.rs  type_lib.rs
src/typeobj/: build.rs  compile.rs  mod.rs  serialize.rs  transpile.rs  type_obj.rs
src/typesys/: embedded.rs  id.rs  iter.rs  mod.rs  serialize.rs  symbols.rs  translate.rs  type_sys.rs
src/typetree/: builder.rs  mod.rs  tree.rs
src/value/: convert.rs  decode.rs  encode.rs  mod.rs  path.rs  reify.rs  ston.rs  typify.rs  val.rs
stl/: Std@0.1.0.asc.stl  Std@0.1.0.sta  Std@0.1.0.stl  Std@0.1.0.sty  StdLib-v1.0.0.asc.stl  StdLib.asc.stl  StdLib.stl  StdLib.sty  StrictTypes.asc.stl  StrictTypes.stl  StrictTypes.sty  StrictTypes@0.1.0.sta  StrictTypes@0.1.0.stl  StrictTypes@0.1.0.sty  StrictTypes@1.2.0.A.asc.stl  StrictTypes@1.2.0.A.sty  TypeLib.vesper
tests/: byte_str.rs  dependencies.rs  reflect.rs  types.rs
