[package]
name = "strict_types"
description = "Strict types: confined generalized algebraic data types (GADT)"
version = "2.7.0-beta.3"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://strict-types.org"
license = "Apache-2.0"
keywords = ["encoding", "strict-encoding", "aluvm", "ubideco", "gadt"]
categories = ["compilers", "parser-implementations", "mathematics", "science", "data-structures"]
edition = "2021"
rust-version = "1.69.0" # due to toml dependency of amplify crate
readme = "README.md"
exclude = [".github"]

[[bin]]
name = "std-stl"
required-features = ["armor"]

[[bin]]
name = "strict-stl"
required-features = ["armor"]

[[bin]]
name = "strict-vesper"

[[test]]
name = "reflect"
required-features = ["armor"]

[dependencies]
amplify = { version = "4.6.0", features = ["apfloat"] }
ascii-armor = { version = "0.3.0", optional = true }
strict_encoding = { version = "2.7.0-beta.3", features = ["derive", "float"] }
vesper-lang = "0.1.0"
indexmap = "2.0.2"
baid58 = "0.4.4"
half = "2.2.0"
sha2 = "0.10.8"
serde_crate = { package = "serde", version = "1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8.2", optional = true }

[features]
default = []
all = ["serde", "armor"]
armor = ["ascii-armor"]
serde = [
    "serde_crate",
    "serde_json", "serde_yaml", "toml",
    "amplify/serde", "strict_encoding/serde"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
