[package]
name = "strict_types"
description = "Strict types: confined generalized algebraic data types (GADT)"
version = "2.8.3"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://strict-types.org"
license = "Apache-2.0"
keywords = ["encoding", "strict-encoding", "aluvm", "ubideco", "gadt"]
categories = ["compilers", "parser-implementations", "mathematics", "science", "data-structures"]
edition = "2021"
rust-version = "1.77.0"
readme = "README.md"
exclude = [".github"]

[[bin]]
name = "std-stl"
required-features = ["stl"]

[[bin]]
name = "strict-stl"
required-features = ["stl"]

[[bin]]
name = "strict-vesper"

[[test]]
name = "reflect"
required-features = ["stl"]

[dependencies]
amplify = "~4.8.0"
ascii-armor = { version = "0.9.0", optional = true }
baid64 = "0.4.1"
strict_encoding = "~2.8.1"
vesper-lang = { version = "0.2.1", optional = true }
indexmap = "2.6.0"
sha2 = "0.10.8"
serde = { version = "1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8.19", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = ["serde", "armor"]
armor = ["ascii-armor"]
stl = ["armor", "vesper-lang"]
serde = [
    "dep:serde",
    "serde_json", "serde_yaml", "toml",
    "amplify/serde", "strict_encoding/serde",
    "indexmap/serde"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
